Fix Projects section spacing

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -298,7 +298,7 @@
 }
 
 .projects-section {
-  padding: 10rem 0;
+  padding: 7rem 0;
   background: #fff;
   border-top: 1px solid #c9c9c9;
 }
