--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,5 +1,5 @@
 .projects-section {
-  padding: 10rem 0;
+  padding: 7rem 0;
   background: $white;
   border-top: 1px solid lighten($black, 70%);
   .projects-section__title {
